@@ -69,6 +69,7 @@ xine-lib (1.1.90) (Unreleased)
     colour controls, zooming, colour keying.
 
 xine-lib (1.1.17) 2009-??-??
+  * Build fixes related to ImageMagick 6.4 & later.
   * Enable libmpeg2new. This is not yet production code; the old mpeg2
     decoder remains the default.
 
